<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/fifteen_dp"
    android:layout_marginBottom="@dimen/six_dp"
    android:layout_marginHorizontal="@dimen/eight_dp"
    android:paddingVertical="@dimen/ten_dp"
    android:paddingHorizontal="@dimen/fifteen_dp"
    android:background="@drawable/card_bg"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvDay"
        style="@style/WeatherForecastItemBodyStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Tuesday"
        android:textColor="@color/blue_gray"
        android:textSize="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvTempHighLow"
        style="@style/WeatherForecastItemSubTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="H:27°/L:31°"
        app:layout_constraintTop_toBottomOf="@id/tvDay"
        app:layout_constraintStart_toStartOf="@id/tvDay"/>

    <TextView
        android:id="@+id/tvWeatherCondition"
        style="@style/WeatherForecastItemTitleStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_clear"
        app:layout_constraintTop_toTopOf="@id/tvDay"
        app:layout_constraintBottom_toBottomOf="@id/tvTempHighLow"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_wind"
        style="@style/MaterialButtonWithIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/three_dp"
        android:text="@string/label_wind"
        app:icon="@drawable/ic_location"
        app:iconSize="@dimen/button_medium_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTempHighLow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_pressure"
        style="@style/MaterialButtonWithIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_pressure"
        app:icon="@drawable/ic_temprature"
        app:iconSize="@dimen/button_medium_icon_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wind" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_chance_of_rain"
        style="@style/MaterialButtonWithIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_weather"
        app:iconSize="@dimen/button_medium_icon_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_wind"
        android:text="@string/label_chance_of_rain"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_humidity"
        style="@style/MaterialButtonWithIconStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_water_outline"
        app:iconSize="@dimen/button_medium_icon_size"
        app:layout_constraintStart_toStartOf="@id/tv_chance_of_rain"
        app:layout_constraintTop_toTopOf="@id/tv_pressure"
        android:text="@string/_83_nhumidity" />
    
    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        android:layout_marginVertical="@dimen/ten_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_wind"
        app:layout_constraintBottom_toBottomOf="@id/tv_pressure"/>

</androidx.constraintlayout.widget.ConstraintLayout>